# script-utils

./: .gitignore  .project  batch.py  borg-newfiles.py  borg-save.sh  dispatch.py  dorun.sh  ezmount.py  fax.sh  files-to-tree.sh  genpass.sh  gifmesome.py  git-wtf  gnome-dynamic-wallpaper.sh  kimsufi-checker.py  macaddr-random.sh  mgit.sh  mm-renamer.json  mm-renamer.py  mm-renamer.sh  oa-scan.sh  passme.sh  plooze.py  pluzzdl.md  pluzzdl.sh  pyproject.toml  qr-wifi-gen.sh  remotebord.md  remoteborg.py  run-docker.sh  steucli.py  termicolor.py  uniqlines.py  vi-renamer.py  vi-renamer.sh  vod_ftv.sh  xmlindent.sh  ydl-interactive.py  youtube-dl-interactive.py  youtube-mirror.sh
doc/: subdl.README  subdl.md
etc/: auto-rdb.conf  ls-last.conf
script_utils/: batch.py  chmod-init.sh  dispatch.py  gifmesome.py  hrenamer.py  mmrenamer.py  qr-wifi-gen.sh  remoteborg.py  steucli.py  subclean.pl  vod.sh  vod_gul.sh  ydl-interactive.py  youtube-mirror.sh
