[tool.poetry]
name = "script-utils"
version = "0.1.0"
description = ""
authors = ["Sébastien MB <seb@essembeh.org>"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = ""
bs4 = ""
Levenshtein = ""
requests = ""

[tool.poetry.dev-dependencies]
black = ""
pylint = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
